# llms-from-scratch-rs

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml  test_doc.yml
src/: candle_addons.rs  lib.rs
src/examples/: apdx_e.rs  ch02.rs  ch03.rs  ch04.rs  ch05.rs  ch06.rs  ch07.rs  mod.rs
src/examples/ch02/: mod.rs
src/exercises/: ch02.rs  ch03.rs  ch04.rs  ch05.rs  ch06.rs  ch07.rs  mod.rs
src/exercises/ch02/: mod.rs
src/exercises/ch2/: mod.rs
src/listings/: apdx_e.rs  ch02.rs  ch03.rs  ch04.rs  ch05.rs  ch06.rs  ch07.rs  ch2.rs  mod.rs
src/listings/ch07/: bonus.rs  mod.rs
